--- a/index.html
+++ b/index.html
@@ -881,6 +881,12 @@
                 },
 
                 async handleJoinServer() {
+                    if (!ZappyApp.state.currentUser || !ZappyApp.state.currentUser.uid) {
+                        ZappyApp.ui.displayMessage('join-server-error', 'Please sign in to send a join request.', true);
+                        if (ZappyApp.elements.loadingOverlay) ZappyApp.elements.loadingOverlay.classList.add('hidden');
+                        return;
+                    }
+const userId = ZappyApp.state.currentUser.uid; // This will now be guaranteed to exist and be valid for Firebase Auth
                     if (ZappyApp.elements.loadingOverlay) ZappyApp.elements.loadingOverlay.classList.remove('hidden');
                     const joinCodeInput = document.getElementById('join-code-input');
                     const joinCode = joinCodeInput ? joinCodeInput.value.toUpperCase() : '';
